Eclipse tests are run and reported by Test task.