@@ -1,3 +1,5 @@
+import org.gradle.tooling.pde.EclipseTestExecuter
+
 apply plugin: 'java'
 apply plugin: 'org.akhikhl.wuff.eclipse-ide-bundle'
 
@@ -18,4 +20,41 @@ task integTest(type: org.gradle.tooling.pde.RunPDETest,
         dependsOn: [':intTestImage:buildProduct_linux_x86_64', ':intTestImage:prepareRunConfig']) {
     inputs.files project(':intTestImage').task(':prepareRunConfig').outputs
     intImageTestProject project(':intTestImage')
+    testPluginName 'PhoneBookExample'
+}
+
+sourceSets {
+    eclipseTest {
+        compileClasspath += main.output + test.output
+        runtimeClasspath += main.output + test.output
+        java {
+            srcDir 'src/main/java'
+        }
+        resources {
+            srcDir 'src/main/resources'
+        }
+    }
+}
+
+configurations {
+    eclipseTestCompile.extendsFrom testCompile
+    eclipseTestRuntime.extendsFrom testRuntime
+}
+
+task prepareEclipseTest(type: org.gradle.tooling.pde.PrepareEclipseTestTask,
+        dependsOn: [':intTestImage:buildProduct_linux_x86_64', ':intTestImage:prepareRunConfig']) {
+    intImageTestProject project(':intTestImage')
+    testPluginName 'PhoneBookExample'
+}
+
+task eclipseTest(type: Test, dependsOn: 'prepareEclipseTest') {
+    testExecuter = new EclipseTestExecuter()
+
+    testClassesDir = sourceSets.eclipseTest.output.classesDir
+    classpath = sourceSets.eclipseTest.runtimeClasspath
+    testSrcDirs = []
+    // jvmArgs '-Xmx512m', '-XX:MaxPermSize=256m', '-XX:+HeapDumpOnOutOfMemoryError'
+
+    // reports.junitXml.destination = file("${project.testResultsDir}/$name")
+    reports.html.destination = file("${project.reporting.baseDir}/$name")
 }
